@@ -1,5 +1,15 @@
+2005-02-08  John Sullivan  <john@wjsullivan.net>
+
+	* README: Added note about dependency on external url.el, not
+	distributed with delicious-el.
+
 2005-02-07  John Sullivan  <john@wjsullivan.net>
 
+	* delicious.el (delicious-search-buffer-finish): Changed order to
+	activate View mode before Delicious Search mode.
+	(delicious-search-previous-result): New function to move backwards
+	by link in the search results buffer.
+	
 	* README: Added documentation section "* Interactive search
 	commands" with information about all of the new searching functions.
 
